thumbnailer (2.3+15.10.20150915.1-0ubuntu2) UNRELEASED; urgency=medium
  [ Michi Henning ]
  * "thumbnailer-admin clear f" now also resets the network retry timeout.

 -- Michi Henning <michi.henning@canonical.com>  Sun, 20 Sep 2015 20:06:32 +1000

thumbnailer (2.3+15.10.20150915.1-0ubuntu1) wily; urgency=medium

  [ Michi Henning ]
  * Added man pages for thumbnailer-admin, thumbnailer-service,
    and thumbnailer-settings.
  * Removed a bunch of lintian warnings and errors.
  * Removed source for persistent cache.
  * Added inactivity timeout to admin interface, so the service
    exits after 30 seconds if it is started only to, for example,
    retrieve the stats. Activity on the admin interface now keeps
    the service alive the same way activity on the thumbnailer interface does.
  * Added average hit and miss run length to stats returned by
    thumbnailer-admin.
  * Changed semantics for requests with (0,0) size. All requests are now
    clamped to a 1920x1920 bounding box.
  * Fixed incorrect timeout semantics for unexpected network errors.

  [ James Henstridge ]
  * Renamed QML package to qml-module-XXX format and add transitional
    package. (LP: #1342031)
  * Port QML module to use libthumbnailer-qt.

  [ Xavi Garcia ]
  * Add new libthumbnailer-qt1.0 library, providing a C++ client API.

  [ Albert Astals Cid ]
  * In QML image provider, only create QQuickTextureFactory when
    needed, fixing a memory leak when requests are cancelled. (LP:
    #1484914)

  [ CI Train Bot ]
  * debian/libthumbnailer-qt1.0.symbols: update to released version.
  * New rebuild forced.

 -- Michi Henning <michi.henning@canonical.com>  Tue, 15 Sep 2015 11:04:14 +0000

thumbnailer (2.2+15.10.20150801-0ubuntu1) wily; urgency=medium

  [ Michi Henning ]
  * Compatibility fixes  for GCC 5, Boost 1.58, and Libapparmor 2.10.
  * Correctly initialise the cache stats after upgrading from an old
    cache version.