@@ -1,6 +1,7 @@
 thumbnailer (2.3+15.10.20150915.1-0ubuntu2) UNRELEASED; urgency=medium
   [ Michi Henning ]
   * "thumbnailer-admin clear f" now also resets the network retry timeout.
+  * Added cancelled() accessor to Request class.
 
  -- Michi Henning <michi.henning@canonical.com>  Sun, 20 Sep 2015 20:06:32 +1000
 
